samples/_failures_safe/1761246639_24c0df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d6e97bb.c: In function ‘main’:
./samples/SAFE/__tmp_4d6e97bb.c:137:31: error: expected ‘;’ at end of input
  137 |                         printf
      |                               ^
      |                               ;
./samples/SAFE/__tmp_4d6e97bb.c:137:25: error: expected declaration or statement at end of input
  137 |                         printf
      |                         ^~~~~~
./samples/SAFE/__tmp_4d6e97bb.c:137:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d6e97bb.c:137:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d6e97bb.c:137:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d6e97bb.c:137:25: error: expected declaration or statement at end of input
